Fixed skill chips not wrapping to new line

--- a/styles/projects.less
+++ b/styles/projects.less
@@ -89,6 +89,8 @@
 
 
 .chip-wrapper{
+  display: flex;
+  flex-wrap: wrap;
   margin-top: @size-xxl;
 }
 
@@ -98,6 +100,6 @@
   padding: @size-xs;
   border: 1px @color-grey-light solid;
   border-radius: 5px;
-  margin: @size-l @size-xs @size-l 0;
+  margin: @size-s @size-xs 0 0;
 }
 
